# mautic-cli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
skills/mautic/: SKILL.md
src/mautic_cli/: auth.py  cli.py  client.py  config.py  context.py  json_input.py  output.py
src/mautic_cli/commands/: __init__.py  assets.py  auth_cmd.py  campaigns.py  categories.py  companies.py  contacts.py  emails.py  fields.py  forms.py  notes.py  pages.py  points.py  reports.py  segments.py  stages.py  tags.py  webhooks.py
tests/: conftest.py  test_assets.py  test_auth.py  test_campaigns.py  test_categories.py  test_cli.py  test_client.py  test_companies.py  test_config.py  test_contacts.py  test_context.py  test_emails.py  test_fields.py  test_forms.py  test_json_input.py  test_notes.py  test_output.py  test_pages.py  test_points.py  test_reports.py  test_segments.py  test_stages.py  test_tags.py  test_webhooks.py
