[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mautic-cli"
version = "0.1.0"
description = "CLI for Mautic marketing automation - built for humans and AI agents."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.22",
]

[project.scripts]
mautic = "mautic_cli.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
